--- a/deploy/server/route.yaml
+++ b/deploy/server/route.yaml
@@ -13,7 +13,7 @@ spec:
     termination: edge
   host: playground.seedwing.io
   port:
-    targetPort: 8080-8080
+    targetPort: endpoint
   to:
     kind: Service
     name: seedwing-policy-server
