--- a/deploy/server/service.yaml
+++ b/deploy/server/service.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: seedwing
 spec:
   ports:
-  - name: 8080-8080
+  - name: endpoint
     port: 8080
     protocol: TCP
     targetPort: 8080
