--- a/deploy/server/certificate.yaml
+++ b/deploy/server/certificate.yaml
@@ -7,6 +7,7 @@ spec:
   commonName: playground.seedwing.io
   dnsNames:
   - playground.seedwing.io
+  - monitoring.playground.seedwing.io
   duration: 2160h0m0s
   issuerRef:
     kind: ClusterIssuer
