fix: redirect http -> https

--- a/deploy/server/route.yaml
+++ b/deploy/server/route.yaml
@@ -11,6 +11,7 @@ metadata:
 spec:
   tls:
     termination: edge
+    insecureEdgeTerminationPolicy: Redirect
   host: playground.seedwing.io
   port:
     targetPort: endpoint
