--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,7 @@ jobs:
           chmod +x yq
       - name: Update tags
         run: |
-          ./yq e -i ".spec.template.spec.containers[].image = '${{ needs.args.outputs.imageref }}'" deploy/server/deployment.yaml
+          ./yq e -i ".spec.template.spec.containers[].image = \"${{ needs.args.outputs.imageref }}\"" deploy/server/deployment.yaml
       - name: Commit and tag
         run: |
           git commit deploy/server/deployment.yaml -m 'Update swio image'
