set committer identity

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,6 +39,8 @@ jobs:
           ./yq e -i ".spec.template.spec.containers[].image = \"${{ needs.args.outputs.imageref }}\"" deploy/server/deployment.yaml
       - name: Commit and tag
         run: |
+          git config --global user.email "ci@seedwing.io"
+          git config --global user.name "Seedwing CI"
           git commit deploy/server/deployment.yaml -m 'Update swio image'
           git tag v0.1.0-nightly.${{ needs.args.coutputs.commit }}
           git push --follow-tags
