--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,5 +42,5 @@ jobs:
           git config --global user.email "ci@seedwing.io"
           git config --global user.name "Seedwing CI"
           git commit deploy/server/deployment.yaml -m 'Update swio image'
-          git tag v0.1.0-nightly.${{ needs.args.coutputs.commit }}
+          git tag v0.1.0-nightly.${{ needs.args.outputs.commit }}
           git push --follow-tags
