--- a/deploy/server/deployment.yaml
+++ b/deploy/server/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: seedwing-policy-server
     spec:
       containers:
-        - image: ghcr.io/seedwing-io/swio:latestcheck
+        - image: ghcr.io/seedwing-io/swio:0.1.0-alpha.23
           imagePullPolicy: IfNotPresent
           name: seedwing-policy-server
           ports:
